# Mini-OS

./: README.md  build_irfs  qemu
bootloader/: extlinux
busybox/: create_links
init/: Cargo.toml  build
init/src/: disks.rs  main.rs
irfs/: init
irfs/etc/: resolv.conf
iso/: build4
iso-creator/: build
iso-creator/boot/: boot.asm  build
iso-creator/isolinux/: isolinux.cfg
iso-creator/loader/: build  loader.asm  loader.bkp
iso-creator/output/iso/: disk.img
kernel/: .config  README.md  config
kernel4/: .config  README.md  kernel  mkcfg
rootfs/: checksum
