[package]
name = "minios-installer"
version = "0.7.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["mount"] }
mbrman="0.6.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
getopts="0.2"

[profile.release]
lto = true          # Link Time Optimization
strip = true        # Удалить отладочные символы
opt-level = "z"     # Оптимизация на размер (а не на скорость)
panic = "abort"     # Уменьшает размер, паника сразу завершает процесс
codegen-units = 1   # Включает более агрессивные оптимизации
