[package]
name = "minios-installer"
version = "0.8.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["mount"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
getopts="0.2"
sha2 = "0.10"
ext234-rs = { git = "https://github.com/mametoff/ext234-rs.git" }
sfdisk-sys = { git = "https://github.com/mametoff/sfdisk-sys.git" }
swap-rs =  { git = "https://github.com/mametoff/swap-rs.git" } 

[profile.release]
lto = true          
strip = true        
opt-level = "z"     
panic = "abort"     
codegen-units = 1   
